# MegaVul

./: .gitignore  pyproject.toml  pyrightconfig.json  setup.py
.devcontainer/: Dockerfile  devcontainer.json  init.sh
examples/: abstract_code.py  read_megavul.py  visualize_dot_graph.py
megavul/: config.yaml  main.py
megavul/git_platform/: cgit_pf.py  common.py  git_platform_base.py  github_pf.py  gitiles_pf.py  gitlab_pf.py  gitweb_pf.py
megavul/parser/: clike_code_abstracter.py  code_abstracter_base.py  go_code_abstracter.py  java_code_abstracter.py  javascript_code_abstracter.py  parser_base.py  parser_c.py  parser_clike.py  parser_cpp.py  parser_go.py  parser_java.py  parser_javascript.py  parser_python.py  parser_util.py  python_code_abstracter.py
megavul/pipeline/: download_cve_from_nvd.py  extract_and_download_commit.py  extract_commit_diff.py  extract_commit_diff_filter.py  extract_commit_diff_statistic.py  extract_commit_diff_util.py  extract_cve_info.py  extract_cve_info_util.py  extract_graph_and_abstract.py  flatten_megavul.py  json_save_location.py
megavul/scala/: MegaVulGraphGenerateForGoTest.scala
megavul/util/: color.py  concurrent_util.py  config.py  dataset_statistic.py  dot_util.py  logging_util.py  storage.py  treemap.py  utils.py
scripts/: format.sh  lint.sh  typecheck.sh
tests/: conftest.py
tests/git_platform/: test_github_pf_integration.py  test_gitlab_v4_api.py  test_gitlab_v4_api_integration.py
tests/parser/: test_parse_file.py  test_parser_javascript.py
tests/pipeline/: test_download_cve_from_nvd.py  (+2 more)
(+13 files in other folders)
