[project]
name = "megavul"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "marshmallow-dataclass>=8.7.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "tree-sitter>=0.25.2",
]

[tool.uv]
# editableインストールする
package = true
