[project]
name = "megavul"
version = "0.0.1"
description = "A Continuously Updated C/C++/Java Function-Level Vulnerability Dataset"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chardet>=5.2.0",
    "marshmallow-dataclass>=8.7.1",
    "matplotlib>=3.10.8",
    "ordered-set>=4.1.0",
    "plotly>=6.5.2",
    "pygithub>=2.8.1",
    "python-gitlab>=8.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "timeout-decorator>=0.5.0",
    "tqdm>=4.67.3",
    "tree-sitter>=0.25.2",
    "wordsegment>=1.3.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.6",
]

[tool.setuptools.packages.find]
include = ["megavul*"]

[tool.pytest.ini_options]
markers = [
    "network: 実際にHTTP通信を行うインテグレーションテスト",
]

[tool.uv]
# editableインストールする
package = true
